1999-01-02  Jeff Garzik  <jgarzik@pobox.com>

	* configure.in, config.h.in, gdk/gdkimage.c:
	Removed features.h test.

	* gdk/gdkdnd.c:
	Guard public functions against NULL pointer derefs.

Fri Jan  1 18:41:09 PST 1999 Manish Singh <yosh@gimp.org>

	* gdk/gdk.c
	* gdk/gdkinputnone.h
	* gtk/gtkruler.c: casts to get rid of const warnings

	* gtk/Makefile.am: fix gtktypebuiltins.h dependencies, and do a
	cmp so people don't whine about rebuilds

	* gtk/gtknotebook.c: use g_snprintf on translated strings, so we
	don't get buffer overflows

	* gtk/gtkrc.c: use g_strdup_printf instead of g_malloc/sprintf
	Plug some memleaks.

1999-01-01  Jeff Garzik  <jgarzik@pobox.com>

	* configure.in, config.h.in:
	Check for features.h.

	* gdk/gdkevents.c (gdk_event_put, gdk_events_queue):
	Fixed bug in linked list append logic by replacing hand-coded
	logic with a call to g_list_append.  Bug found by tml.

	* gdk/gdkimage.c:
	'gcc -ansi -pedantic' on GNU/Linux spews warnings and errors
	in sys/ipc.h, including one specific admonishment to use
	_SVID_SOURCE or _XOPEN_SOURCE.	Manually defined the latter, and
	included features.h if present to obtain the necessary
	side-effects.

	* gtk/gtkclist.c, gtk/gtkeditable.c:
	Eliminates comma-after-final-element warnings.

	* gtk/gtkfontsel.c (gtk_font_selection_init):
	Fixed bug where an intl string was declared as _("x") in
	local var initializer.

1998-12-31  Jeff Garzik  <jgarzik@pobox.com>

	* gtk/gtklabel.c (gtk_label_split_text_wrapped):
	word->space is now initialized correctly.
	Reported by Chi-Deok Hwang <cdhwang@sr.hei.co.kr>.

1998-12-30  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gtk/gtkmain.c (gtk_main_do_event): Fix memory leak.
	gdk_event_put would make a copy of next_event, and next_event was
	not being freed.

Wed Dec 30 18:39:21 CST 1998 Shawn T. Amundson <amundson@gtk.org>

	* Released GTK+ 1.1.11

	* INSTALL:
	  NEWS:
	  README:
	  configure.in:
	  gtk+.spec:
	  docs/gtk-config.1:
	  gtk/gtkfeatures.h.in: version=1.1.11